# cuda_median_filter

./: .gitmodules  CMakeLists.txt  README.md  dependencies.cmake
cmake/: CompilerWarnings.cmake  CudaSettings.cmake  DepTargets.cmake  SYCLTargets.cmake
doc/: create_plots.py  opencv_build.md
include/cuda_median_filter/: cuda_median_filter.h  expert_settings.h
include/cuda_median_filter/detail/: cuda_median_filter_impl.h  image_filter_config.h  image_source_target.h  kernel_configuration.h  load_apron.h  load_neighbor_pixels.h  math.h  pitched_array_accessor.h  pointer_arithmetic.h  primitives.h  static_for.h
include/cuda_median_filter/detail/cuda/: median_filter.h  median_filter_impl.h  texture_image_source.h  wrap_cuda.h
include/cuda_median_filter/detail/sycl/: median_filter.h
src/: CMakeLists.txt
src/benchmark_app/: CMakeLists.txt
src/benchmark_app/src/: abstract_filter_impl.h  filter_configuration.h  filter_database.cpp  filter_database.h  filter_spec_factory.h  main.cpp
src/benchmark_app/src/impls/cuda_median_filter/: create_cuda_median_filter_impls.cu
src/benchmark_app/src/impls/cuda_median_filter_sycl/: create_cuda_median_filter_sycl_impls.cpp
src/benchmark_app/src/impls/npp/: create_npp_median_filter_impls.cpp
src/benchmark_app/src/impls/opencv/: create_opencv_cuda_median_filter_impls.cpp  create_opencv_median_filter_impls.cpp  cv_mat_image_view.h  opencv_wrap.h
src/cli_app/: CMakeLists.txt
src/cli_app/src/: main.cpp  main.cu  run_with_cuda.cu  run_with_sycl.cpp
src/shared_utils/: CMakeLists.txt
src/shared_utils/include/shared/: cuda_util.h  fill_image_random.h  gpu_image.h  image.h  image_transfer.h  index2d_range.h  ppm.h  reinterpret_as.h  statistics.h  stream_handle.h  texture_handle.h  type_names.h
src/shared_utils/include/shared/cuda/: gpu_image.h  image_transfer.h  stream_handle.h  texture_handle.h  util.h
src/test/: CMakeLists.txt
src/test/src/: cuda_median_filter_tests.cu  filter_types_factory.h  image_filter_config.cpp  image_matcher.h  load_neighbor_pixels.cpp  math.cpp  naive_median_filter_impl.h  pointer_arithmetic.cpp  primitives.cpp  static_for.cpp
src/test/src/cuda/: cuda_median_filter_tests.cu
src/test/src/sycl/: cuda_median_filter_tests.cpp
src/test/src/util/: filter_types_factory.h  image_matcher.h  naive_median_filter_impl.h
